--- a/src/OAuth2.Mobile.Android/OAuth2.Mobile.Android.csproj
+++ b/src/OAuth2.Mobile.Android/OAuth2.Mobile.Android.csproj
@@ -14,6 +14,18 @@
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
     <AssemblyName>OAuth2.Mobile.Android</AssemblyName>
+    <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
+    <TargetFrameworkVersion>v7.1</TargetFrameworkVersion>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType>none</DebugType>
+    <Optimize>True</Optimize>
+    <OutputPath>bin\Release</OutputPath>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+    <ConsolePause>False</ConsolePause>
+    <AndroidUseSharedRuntime>False</AndroidUseSharedRuntime>
+    <AndroidLinkMode>SdkOnly</AndroidLinkMode>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
@@ -26,49 +38,90 @@
     <ConsolePause>False</ConsolePause>
     <AndroidLinkMode>None</AndroidLinkMode>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>none</DebugType>
-    <Optimize>True</Optimize>
-    <OutputPath>bin\Release</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>False</ConsolePause>
-    <AndroidUseSharedRuntime>False</AndroidUseSharedRuntime>
-    <AndroidLinkMode>SdkOnly</AndroidLinkMode>
-  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PCLCrypto, Version=2.0.0.0, Culture=neutral, PublicKeyToken=d4421c8a4786956c, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\PCLCrypto.2.0.147\lib\MonoAndroid23\PCLCrypto.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="PInvoke.BCrypt, Version=0.3.0.0, Culture=neutral, PublicKeyToken=9e300f9f87f04a7a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\PInvoke.BCrypt.0.3.2\lib\portable-net45+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10\PInvoke.BCrypt.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="PInvoke.Kernel32, Version=0.3.0.0, Culture=neutral, PublicKeyToken=9e300f9f87f04a7a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\PInvoke.Kernel32.0.3.2\lib\portable-net45+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10\PInvoke.Kernel32.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="PInvoke.NCrypt, Version=0.3.0.0, Culture=neutral, PublicKeyToken=9e300f9f87f04a7a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\PInvoke.NCrypt.0.3.2\lib\portable-net45+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10\PInvoke.NCrypt.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="PInvoke.Windows.Core, Version=0.3.0.0, Culture=neutral, PublicKeyToken=9e300f9f87f04a7a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\PInvoke.Windows.Core.0.3.2\lib\portable-net45+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10\PInvoke.Windows.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\RestSharp.105.2.3\lib\MonoAndroid10\RestSharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Mono.Android" />
-    <Reference Include="RestSharp.MonoDroid">
-      <HintPath>..\..\lib\RestSharp\RestSharp.MonoDroid.dll</HintPath>
-    </Reference>
-    <Reference Include="Validation">
-      <HintPath>..\..\lib\Validation\Validation.dll</HintPath>
-    </Reference>
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Json" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.Services" />
-    <Reference Include="Xamarin.Auth.Android">
-      <HintPath>..\..\lib\Xamarin.Auth\Xamarin.Auth.Android.dll</HintPath>
+    <Reference Include="Validation, Version=2.4.0.0, Culture=neutral, PublicKeyToken=2fc06f0d701809a7, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Validation.2.4.9\lib\netstandard1.3\Validation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Xamarin.Auth, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Xamarin.Auth.1.3.2.1\lib\MonoAndroid10\Xamarin.Auth.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\OAuth2.Mobile\AccessToken.cs"><Link>AccessToken.cs</Link></Compile>
-	<Compile Include="..\OAuth2.Mobile\AccessTokenErrorResponse.cs"><Link>AccessTokenErrorResponse.cs</Link></Compile>
-	<Compile Include="..\OAuth2.Mobile\AccessTokenResponse.cs"><Link>AccessTokenResponse.cs</Link></Compile>
-	<Compile Include="..\OAuth2.Mobile\OAuthException.cs"><Link>OAuthException.cs</Link></Compile>
-	<Compile Include="..\OAuth2.Mobile\OAuthServerConfiguration.cs"><Link>OAuthServerConfiguration.cs</Link></Compile>
-	<Compile Include="..\OAuth2.Mobile\Requests\ClientCredentialsGrantTokenRequest.cs"><Link>Requests\ClientCredentialsGrantTokenRequest.cs</Link></Compile>
-	<Compile Include="..\OAuth2.Mobile\Requests\TokenRequest.cs"><Link>Requests\TokenRequest.cs</Link></Compile>
-	<Compile Include="..\OAuth2.Mobile\Requests\ResourceOwnerPasswordCredentialsGrantTokenRequest.cs"><Link>Requests\ResourceOwnerPasswordCredentialsGrantTokenRequest.cs</Link></Compile>	
-	<Compile Include="..\OAuth2.Mobile\Requests\RefreshAccessTokenRequest.cs"><Link>Requests\RefreshAccessTokenRequest.cs</Link></Compile>
-	<Compile Include="..\OAuth2.Mobile\RestClientExtensions.cs"><Link>RestClientExtensions.cs</Link></Compile>
-	<Compile Include="..\OAuth2.Mobile\AccessTokenClient.cs"><Link>AccessTokenClient.cs</Link></Compile>
-	<Compile Include="..\OAuth2.Mobile\AccessTokenStore.cs"><Link>AccessTokenStore.cs</Link></Compile>
+    <Compile Include="..\OAuth2.Mobile\AccessToken.cs">
+      <Link>AccessToken.cs</Link>
+    </Compile>
+    <Compile Include="..\OAuth2.Mobile\AccessTokenResponse.cs">
+      <Link>AccessTokenResponse.cs</Link>
+    </Compile>
+    <Compile Include="..\OAuth2.Mobile\OAuthServerConfiguration.cs">
+      <Link>OAuthServerConfiguration.cs</Link>
+    </Compile>
+    <Compile Include="..\OAuth2.Mobile\Requests\ClientCredentialsGrantTokenRequest.cs">
+      <Link>Requests\ClientCredentialsGrantTokenRequest.cs</Link>
+    </Compile>
+    <Compile Include="..\OAuth2.Mobile\Requests\TokenRequest.cs">
+      <Link>Requests\TokenRequest.cs</Link>
+    </Compile>
+    <Compile Include="..\OAuth2.Mobile\Requests\ResourceOwnerPasswordCredentialsGrantTokenRequest.cs">
+      <Link>Requests\ResourceOwnerPasswordCredentialsGrantTokenRequest.cs</Link>
+    </Compile>
+    <Compile Include="..\OAuth2.Mobile\Requests\RefreshAccessTokenRequest.cs">
+      <Link>Requests\RefreshAccessTokenRequest.cs</Link>
+    </Compile>
+    <Compile Include="..\OAuth2.Mobile\ResponseStatusExtensions.cs">
+      <Link>ResponseStatusExtensions.cs</Link>
+    </Compile>
+    <Compile Include="..\OAuth2.Mobile\RestClientExtensions.cs">
+      <Link>RestClientExtensions.cs</Link>
+    </Compile>
+    <Compile Include="..\OAuth2.Mobile\AccessTokenClient.cs">
+      <Link>AccessTokenClient.cs</Link>
+    </Compile>
+    <Compile Include="..\OAuth2.Mobile\AccessTokenStore.cs">
+      <Link>AccessTokenStore.cs</Link>
+    </Compile>
     <Compile Include="HttpException.cs" />
     <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
     <Folder Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
