--- a/src/OAuth2.Mobile/packages.config
+++ b/src/OAuth2.Mobile/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="RestSharp" version="104.1" targetFramework="net40" />
-  <package id="Validation" version="2.0.2.13022" targetFramework="net40" />
+  <package id="PCLCrypto" version="2.0.147" targetFramework="net45" />
+  <package id="PInvoke.BCrypt" version="0.3.152" targetFramework="net45" />
+  <package id="PInvoke.Kernel32" version="0.3.152" targetFramework="net45" />
+  <package id="PInvoke.NCrypt" version="0.3.152" targetFramework="net45" />
+  <package id="PInvoke.Windows.Core" version="0.3.152" targetFramework="net45" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net40" requireReinstallation="true" />
+  <package id="Validation" version="2.4.9" targetFramework="net40" requireReinstallation="true" />
+  <package id="Xamarin.Auth" version="1.3.2.1" targetFramework="net45" />
 </packages>
