--- a/tests/OAuth2.Mobile.Tests/packages.config
+++ b/tests/OAuth2.Mobile.Tests/packages.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="RestSharp" version="104.1" targetFramework="net40" />
+  <package id="PCLCrypto" version="2.0.147" targetFramework="net46" />
+  <package id="PInvoke.BCrypt" version="0.3.152" targetFramework="net46" />
+  <package id="PInvoke.Kernel32" version="0.3.152" targetFramework="net46" />
+  <package id="PInvoke.NCrypt" version="0.3.152" targetFramework="net46" />
+  <package id="PInvoke.Windows.Core" version="0.3.152" targetFramework="net46" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net46" />
+  <package id="Validation" version="2.4.9" targetFramework="net46" />
+  <package id="Xamarin.Auth" version="1.3.2.1" targetFramework="net46" />
   <package id="xunit" version="1.9.1" targetFramework="net40" />
   <package id="xunit.extensions" version="1.9.1" targetFramework="net40" />
 </packages>
