--- a/src/OAuth2.Mobile.iOS/OAuth2.Mobile.iOS.csproj
+++ b/src/OAuth2.Mobile.iOS/OAuth2.Mobile.iOS.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -46,15 +46,6 @@
     <Reference Include="System.Web.Services" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\OAuth2.Mobile\AccessToken.cs">
-      <Link>AccessToken.cs</Link>
-    </Compile>
-    <Compile Include="..\OAuth2.Mobile\AccessTokenResponse.cs">
-      <Link>AccessTokenResponse.cs</Link>
-    </Compile>
-    <Compile Include="..\OAuth2.Mobile\OAuthServerConfiguration.cs">
-      <Link>OAuthServerConfiguration.cs</Link>
-    </Compile>
     <Compile Include="..\OAuth2.Mobile\Requests\ClientCredentialsGrantTokenRequest.cs">
       <Link>Requests\ClientCredentialsGrantTokenRequest.cs</Link>
     </Compile>
@@ -82,5 +73,5 @@
       <Link>ResponseStatusExtensions.cs</Link>
     </Compile>
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
 </Project>
