--- a/src/OAuth2.Mobile/OAuth2.Mobile.csproj
+++ b/src/OAuth2.Mobile/OAuth2.Mobile.csproj
@@ -72,23 +72,25 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccessToken.cs" />
-    <Compile Include="AccessTokenResponse.cs" />
-    <Compile Include="OAuth2RequestExtensions.cs" />
+    <Compile Include="AccessTokenClient.cs" />
+    <Compile Include="AccessTokenStore.cs" />
     <Compile Include="ResponseStatusExtensions.cs" />
-    <Compile Include="OAuthServerConfiguration.cs" />
     <Compile Include="Requests\ClientCredentialsGrantTokenRequest.cs" />
     <Compile Include="Requests\TokenRequest.cs" />
     <Compile Include="Requests\ResourceOwnerPasswordCredentialsGrantTokenRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requests\RefreshAccessTokenRequest.cs" />
     <Compile Include="RestClientExtensions.cs" />
-    <Compile Include="AccessTokenClient.cs" />
-    <Compile Include="AccessTokenStore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OAuth2.Mobile.Portable\OAuth2.Mobile.Portable.csproj">
+      <Project>{b66313e4-a310-4de1-9feb-0244c936d118}</Project>
+      <Name>OAuth2.Mobile.Portable</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
